--- a/TrainController/traincontrollerui.ui
+++ b/TrainController/traincontrollerui.ui
@@ -842,6 +842,22 @@
       <string>Train Controller</string>
      </property>
     </widget>
+    <widget class="QPushButton" name="debugger">
+     <property name="geometry">
+      <rect>
+       <x>730</x>
+       <y>20</y>
+       <width>101</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Open Debugger</string>
+     </property>
+     <property name="checkable">
+      <bool>false</bool>
+     </property>
+    </widget>
     <zorder>train_index</zorder>
     <zorder>label_7</zorder>
     <zorder>speed_frame</zorder>
@@ -850,6 +866,7 @@
     <zorder>manual_mode_frame</zorder>
     <zorder>brake_frame_2</zorder>
     <zorder>train_controller_label</zorder>
+    <zorder>debugger</zorder>
    </widget>
    <widget class="QWidget" name="tab_2">
     <attribute name="title">
