--- a/TrackModel/stationdetails.ui
+++ b/TrackModel/stationdetails.ui
@@ -42,9 +42,9 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>30</x>
      <y>90</y>
-     <width>181</width>
+     <width>161</width>
      <height>16</height>
     </rect>
    </property>
@@ -55,7 +55,7 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>90</x>
+     <x>60</x>
      <y>30</y>
      <width>111</width>
      <height>16</height>
@@ -94,9 +94,9 @@
   <widget class="QLabel" name="label_8">
    <property name="geometry">
     <rect>
-     <x>100</x>
+     <x>70</x>
      <y>50</y>
-     <width>101</width>
+     <width>71</width>
      <height>16</height>
     </rect>
    </property>
@@ -107,7 +107,7 @@
     <string>Train Number:</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_9">
+  <widget class="QLabel" name="ticket_label">
    <property name="geometry">
     <rect>
      <x>210</x>
@@ -120,7 +120,7 @@
     <string>146</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_10">
+  <widget class="QLabel" name="train_label">
    <property name="geometry">
     <rect>
      <x>210</x>
@@ -133,7 +133,7 @@
     <string>7</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_11">
+  <widget class="QLabel" name="board_label">
    <property name="geometry">
     <rect>
      <x>210</x>
@@ -146,7 +146,7 @@
     <string>16</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_12">
+  <widget class="QLabel" name="leave_label">
    <property name="geometry">
     <rect>
      <x>210</x>
@@ -162,14 +162,27 @@
   <widget class="QLabel" name="label_13">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>10</y>
-     <width>47</width>
-     <height>14</height>
+     <x>10</x>
+     <y>0</y>
+     <width>41</width>
+     <height>16</height>
     </rect>
    </property>
    <property name="text">
-    <string>Station</string>
+    <string>Station:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="stationLabel">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>0</y>
+     <width>191</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Oakland</string>
    </property>
   </widget>
  </widget>
