--- a/TrackModel/beacon.ui
+++ b/TrackModel/beacon.ui
@@ -52,7 +52,7 @@
     <string>Door Side:</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_4">
+  <widget class="QLabel" name="stationSide">
    <property name="geometry">
     <rect>
      <x>130</x>
@@ -65,7 +65,7 @@
     <string>Right</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_5">
+  <widget class="QLabel" name="stationName">
    <property name="geometry">
     <rect>
      <x>130</x>
