--- a/TrainController/traincontrollerui.ui
+++ b/TrainController/traincontrollerui.ui
@@ -640,7 +640,7 @@
      <widget class="QLabel" name="manual_mode_label">
       <property name="geometry">
        <rect>
-        <x>80</x>
+        <x>50</x>
         <y>0</y>
         <width>131</width>
         <height>41</height>
@@ -652,26 +652,13 @@
        </font>
       </property>
       <property name="text">
-       <string>Manual Mode</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="password_label">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>50</y>
-        <width>81</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Password</string>
+       <string>Manual Mode:</string>
       </property>
      </widget>
      <widget class="QLabel" name="set_setpoint_label">
       <property name="geometry">
        <rect>
-        <x>10</x>
+        <x>0</x>
         <y>100</y>
         <width>101</width>
         <height>20</height>
@@ -681,17 +668,17 @@
        <string>Set Setpoint Speed</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="password_submit_button">
+     <widget class="QPushButton" name="manual_mode_button">
       <property name="geometry">
        <rect>
-        <x>190</x>
+        <x>100</x>
         <y>50</y>
         <width>80</width>
         <height>23</height>
        </rect>
       </property>
       <property name="text">
-       <string>Submit</string>
+       <string>Toggle</string>
       </property>
      </widget>
      <widget class="QPushButton" name="setpoint_speed_button">
@@ -716,7 +703,7 @@
      <widget class="QLabel" name="manual_mode_status">
       <property name="geometry">
        <rect>
-        <x>220</x>
+        <x>190</x>
         <y>0</y>
         <width>31</width>
         <height>41</height>
@@ -731,24 +718,27 @@
        <string>Off</string>
       </property>
      </widget>
-     <widget class="QLineEdit" name="password">
-      <property name="geometry">
-       <rect>
-        <x>70</x>
-        <y>50</y>
-        <width>113</width>
-        <height>22</height>
-       </rect>
-      </property>
-     </widget>
      <widget class="QSpinBox" name="setpoint_speed_edit">
       <property name="geometry">
        <rect>
-        <x>120</x>
+        <x>110</x>
         <y>90</y>
-        <width>61</width>
+        <width>41</width>
         <height>41</height>
        </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="mph_label_4">
+      <property name="geometry">
+       <rect>
+        <x>160</x>
+        <y>100</y>
+        <width>31</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>mph</string>
       </property>
      </widget>
     </widget>
@@ -875,9 +865,9 @@
     <widget class="QFrame" name="kp_ki_frame">
      <property name="geometry">
       <rect>
-       <x>210</x>
-       <y>120</y>
-       <width>211</width>
+       <x>40</x>
+       <y>80</y>
+       <width>261</width>
        <height>151</height>
       </rect>
      </property>
@@ -943,7 +933,7 @@
      <widget class="QPushButton" name="kp_set_button">
       <property name="geometry">
        <rect>
-        <x>110</x>
+        <x>170</x>
         <y>50</y>
         <width>80</width>
         <height>23</height>
@@ -956,7 +946,7 @@
      <widget class="QPushButton" name="ki_set_button">
       <property name="geometry">
        <rect>
-        <x>110</x>
+        <x>170</x>
         <y>100</y>
         <width>80</width>
         <height>23</height>
@@ -974,7 +964,7 @@
        <rect>
         <x>60</x>
         <y>50</y>
-        <width>21</width>
+        <width>91</width>
         <height>22</height>
        </rect>
       </property>
@@ -987,7 +977,7 @@
        <rect>
         <x>60</x>
         <y>100</y>
-        <width>21</width>
+        <width>91</width>
         <height>22</height>
        </rect>
       </property>
