--- a/TrainController/testui.ui
+++ b/TrainController/testui.ui
@@ -94,7 +94,7 @@
   <widget class="QPushButton" name="commanded_speed_button">
    <property name="geometry">
     <rect>
-     <x>230</x>
+     <x>270</x>
      <y>140</y>
      <width>80</width>
      <height>23</height>
@@ -107,7 +107,7 @@
   <widget class="QPushButton" name="actual_speed_button">
    <property name="geometry">
     <rect>
-     <x>230</x>
+     <x>270</x>
      <y>180</y>
      <width>80</width>
      <height>23</height>
@@ -146,7 +146,7 @@
   <widget class="QPushButton" name="authority_button">
    <property name="geometry">
     <rect>
-     <x>230</x>
+     <x>270</x>
      <y>220</y>
      <width>80</width>
      <height>23</height>
@@ -526,7 +526,7 @@
      <enum>QFrame::Plain</enum>
     </property>
     <property name="text">
-     <string/>
+     <string>234.2345</string>
     </property>
    </widget>
    <widget class="QLabel" name="commanded_speed_value">
@@ -542,7 +542,7 @@
      <enum>QFrame::Box</enum>
     </property>
     <property name="text">
-     <string/>
+     <string>53.3455</string>
     </property>
    </widget>
    <widget class="QLabel" name="mph_label">
@@ -770,6 +770,45 @@
    </property>
    <property name="text">
     <string>Send</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="mph_label_3">
+   <property name="geometry">
+    <rect>
+     <x>230</x>
+     <y>140</y>
+     <width>31</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Mph</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="mph_label_4">
+   <property name="geometry">
+    <rect>
+     <x>230</x>
+     <y>180</y>
+     <width>31</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Mph</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="mph_label_5">
+   <property name="geometry">
+    <rect>
+     <x>230</x>
+     <y>220</y>
+     <width>31</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Mph</string>
    </property>
   </widget>
  </widget>
