--- a/ctc/ctc_redline_gui.ui
+++ b/ctc/ctc_redline_gui.ui
@@ -1214,7 +1214,7 @@
      <widget class="QPushButton" name="pushButton_34">
       <property name="geometry">
        <rect>
-        <x>570</x>
+        <x>600</x>
         <y>130</y>
         <width>80</width>
         <height>21</height>
@@ -1258,7 +1258,7 @@
      <widget class="QPushButton" name="pushButton_36">
       <property name="geometry">
        <rect>
-        <x>670</x>
+        <x>720</x>
         <y>130</y>
         <width>80</width>
         <height>21</height>
@@ -1280,7 +1280,7 @@
      <widget class="QPushButton" name="pushButton_37">
       <property name="geometry">
        <rect>
-        <x>870</x>
+        <x>960</x>
         <y>130</y>
         <width>80</width>
         <height>21</height>
@@ -1302,7 +1302,7 @@
      <widget class="QPushButton" name="pushButton_38">
       <property name="geometry">
        <rect>
-        <x>770</x>
+        <x>840</x>
         <y>130</y>
         <width>80</width>
         <height>21</height>
@@ -1337,7 +1337,7 @@
      <widget class="Line" name="line_24">
       <property name="geometry">
        <rect>
-        <x>930</x>
+        <x>1020</x>
         <y>150</y>
         <width>20</width>
         <height>61</height>
@@ -1512,10 +1512,10 @@
        <string>28</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="sw32">
+     <widget class="QPushButton" name="sw33">
       <property name="geometry">
        <rect>
-        <x>950</x>
+        <x>1040</x>
         <y>150</y>
         <width>51</width>
         <height>51</height>
@@ -1525,7 +1525,7 @@
        <string notr="true">background-color: rgb(85, 255, 127);</string>
       </property>
       <property name="text">
-       <string>33</string>
+       <string>32</string>
       </property>
      </widget>
      <widget class="QPushButton" name="sw16">
@@ -1541,7 +1541,7 @@
        <string notr="true">background-color: rgb(85, 255, 127);</string>
       </property>
       <property name="text">
-       <string>15</string>
+       <string>1</string>
       </property>
      </widget>
      <widget class="Line" name="line_43">
@@ -1627,7 +1627,7 @@
        <rect>
         <x>550</x>
         <y>130</y>
-        <width>20</width>
+        <width>51</width>
         <height>20</height>
        </rect>
       </property>
@@ -1638,9 +1638,9 @@
      <widget class="Line" name="line_48">
       <property name="geometry">
        <rect>
-        <x>650</x>
+        <x>680</x>
         <y>130</y>
-        <width>20</width>
+        <width>41</width>
         <height>20</height>
        </rect>
       </property>
@@ -1651,9 +1651,9 @@
      <widget class="Line" name="line_49">
       <property name="geometry">
        <rect>
-        <x>750</x>
+        <x>800</x>
         <y>130</y>
-        <width>20</width>
+        <width>41</width>
         <height>20</height>
        </rect>
       </property>
@@ -1664,9 +1664,9 @@
      <widget class="Line" name="line_50">
       <property name="geometry">
        <rect>
-        <x>850</x>
+        <x>920</x>
         <y>130</y>
-        <width>20</width>
+        <width>41</width>
         <height>20</height>
        </rect>
       </property>
@@ -1909,9 +1909,9 @@
      <widget class="Line" name="line_57">
       <property name="geometry">
        <rect>
-        <x>910</x>
+        <x>830</x>
         <y>350</y>
-        <width>20</width>
+        <width>41</width>
         <height>20</height>
        </rect>
       </property>
@@ -1922,9 +1922,9 @@
      <widget class="Line" name="line_58">
       <property name="geometry">
        <rect>
-        <x>1210</x>
+        <x>1189</x>
         <y>350</y>
-        <width>20</width>
+        <width>41</width>
         <height>20</height>
        </rect>
       </property>
@@ -1951,7 +1951,7 @@
      <widget class="Line" name="line_59">
       <property name="geometry">
        <rect>
-        <x>830</x>
+        <x>740</x>
         <y>300</y>
         <width>20</width>
         <height>51</height>
@@ -1964,9 +1964,9 @@
      <widget class="Line" name="line_60">
       <property name="geometry">
        <rect>
-        <x>1110</x>
+        <x>1070</x>
         <y>350</y>
-        <width>20</width>
+        <width>41</width>
         <height>20</height>
        </rect>
       </property>
@@ -1990,7 +1990,7 @@
      <widget class="QPushButton" name="pushButton_51">
       <property name="geometry">
        <rect>
-        <x>1130</x>
+        <x>1110</x>
         <y>350</y>
         <width>80</width>
         <height>21</height>
@@ -2012,7 +2012,7 @@
      <widget class="QPushButton" name="pushButton_52">
       <property name="geometry">
        <rect>
-        <x>830</x>
+        <x>750</x>
         <y>350</y>
         <width>80</width>
         <height>21</height>
@@ -2034,7 +2034,7 @@
      <widget class="QPushButton" name="pushButton_53">
       <property name="geometry">
        <rect>
-        <x>1030</x>
+        <x>990</x>
         <y>350</y>
         <width>80</width>
         <height>21</height>
@@ -2056,9 +2056,9 @@
      <widget class="Line" name="line_62">
       <property name="geometry">
        <rect>
-        <x>1010</x>
+        <x>950</x>
         <y>350</y>
-        <width>20</width>
+        <width>41</width>
         <height>20</height>
        </rect>
       </property>
@@ -2069,7 +2069,7 @@
      <widget class="QPushButton" name="pushButton_54">
       <property name="geometry">
        <rect>
-        <x>930</x>
+        <x>870</x>
         <y>350</y>
         <width>80</width>
         <height>21</height>
@@ -2088,10 +2088,10 @@
        <string>68</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="sw43">
+     <widget class="QPushButton" name="sw44">
       <property name="geometry">
        <rect>
-        <x>770</x>
+        <x>660</x>
         <y>310</y>
         <width>51</width>
         <height>51</height>
@@ -2101,7 +2101,7 @@
        <string notr="true">background-color: rgb(85, 255, 127);</string>
       </property>
       <property name="text">
-       <string>44</string>
+       <string>43</string>
       </property>
      </widget>
      <widget class="QPushButton" name="pushButton_55">
@@ -3470,6 +3470,22 @@ color: rgb(255, 255, 255);</string>
       </property>
       <property name="wordWrap">
        <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="sw9">
+      <property name="geometry">
+       <rect>
+        <x>1300</x>
+        <y>110</y>
+        <width>51</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(85, 255, 127);</string>
+      </property>
+      <property name="text">
+       <string>0</string>
       </property>
      </widget>
     </widget>
