--- a/ctc/ctc_debugger.ui
+++ b/ctc/ctc_debugger.ui
@@ -287,7 +287,7 @@
      <item row="2" column="0">
       <widget class="QLabel" name="label_19">
        <property name="text">
-        <string>Throughput:</string>
+        <string>New Sales:</string>
        </property>
       </widget>
      </item>
@@ -310,7 +310,7 @@
      <item row="3" column="0" colspan="2">
       <widget class="QPushButton" name="throughput_button">
        <property name="text">
-        <string>Update Throughput</string>
+        <string>Add Sales</string>
        </property>
       </widget>
      </item>
