--- a/TrackModel/simulation.ui
+++ b/TrackModel/simulation.ui
@@ -23,7 +23,7 @@
    <widget class="QPushButton" name="stopButton">
     <property name="geometry">
      <rect>
-      <x>610</x>
+      <x>400</x>
       <y>0</y>
       <width>71</width>
       <height>21</height>
@@ -33,7 +33,7 @@
      <string notr="true">background-color: rgb(255, 0, 0);</string>
     </property>
     <property name="text">
-     <string>Stop</string>
+     <string>Pause</string>
     </property>
    </widget>
    <widget class="QPushButton" name="failSelectButton">
@@ -52,7 +52,7 @@
    <widget class="QPushButton" name="startButton">
     <property name="geometry">
      <rect>
-      <x>490</x>
+      <x>480</x>
       <y>0</y>
       <width>71</width>
       <height>21</height>
@@ -62,7 +62,7 @@
      <string notr="true">background-color: rgb(0, 170, 0);</string>
     </property>
     <property name="text">
-     <string>Start</string>
+     <string>1x</string>
     </property>
    </widget>
    <widget class="QPushButton" name="block1">
@@ -5329,6 +5329,22 @@ color: rgb(255, 255, 255);
      <enum>Qt::Vertical</enum>
     </property>
    </widget>
+   <widget class="QPushButton" name="startButton_2">
+    <property name="geometry">
+     <rect>
+      <x>560</x>
+      <y>0</y>
+      <width>71</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(0, 170, 0);</string>
+    </property>
+    <property name="text">
+     <string>10x</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -5336,7 +5352,7 @@ color: rgb(255, 255, 255);
      <x>0</x>
      <y>0</y>
      <width>1170</width>
-     <height>25</height>
+     <height>20</height>
     </rect>
    </property>
   </widget>
